--- a/_sass/variables/_colours.scss
+++ b/_sass/variables/_colours.scss
@@ -40,17 +40,14 @@
     --post-it--cyan--top: #5B9AE1;
     --post-it--cyan--corner: #8FBAEB;
 
-    --glass-background: rgba(250, 250, 250, 0.5);
-    --glass-border: var(--absolute-white);
-    --plastic-shadow-1: var(--gray-300);
-    --plastic-shadow-2: var(--absolute-white);
-
-
     --glass-background--music: linear-gradient(135deg, rgba(248, 249, 250, 0.6), rgba(251, 92, 116, 0.1));
 
     // Element colours
     --background: var(--white);
     --translucent-background: rgba(250, 250, 250, 0.5);
+    --glass-border: var(--absolute-white);
+    --plastic-shadow-1: var(--gray-300);
+    --plastic-shadow-2: var(--absolute-white);
     --color: var(--black);
     --markerpen-color: var(--black);
     --strikethrough-color: var(--red);
@@ -58,6 +55,7 @@
     --secondary-hoverBackground: var(--gray-300);
     --secondary-borderColor: var(--gray-400);
     --secondary-color: var(--gray-600);
+    --radio-color: var(--cyan);
 
     --link-color: var(--color);
     --link-hoverColor: var(--cyan);
